# magos-google-calendar

./: .env.example  .gitignore  Makefile  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
app/: main.py
app/core/: __init__.py  config.py  database.py  dependencies.py
app/model/: __init__.py  event.py
app/route/: __init__.py  events.py  health.py
app/service/: __init__.py  calendar.py
app/templates/: index.html
docker-files/: Dockerfile.app  Dockerfile.postgres
migrations/: env.py  script.py.mako
migrations/versions/: 3754bac3d238_init.py  434d5a9445cb_init.py
scripts/: auth_init.py
